# cowagent

./: .gitignore  CLAUDE.md  Makefile  README.md  config-template.json  config.json.tmp  pyproject.toml  requirements.txt
bridge/tests/: test_bridge_frontend.py
bridge/web/: chat.html
bridge/web/static/: chat.html
channel/weixin/: weixin_channel.py  weixin_message.py
cowagent/: __main__.py  config.py
cowagent/agent/chat/: __init__.py  service.py
cowagent/agent/memory/: __init__.py  chunker.py  config.py  conversation_store.py  embedding.py  manager.py  service.py  storage.py  summarizer.py
cowagent/agent/prompt/: __init__.py  builder.py  workspace.py
cowagent/agent/protocol/: __init__.py  agent.py  agent_stream.py  context.py  (+4 more)
cowagent/bridge/: agent_bridge.py  agent_event_handler.py  agent_initializer.py  bridge.py  context.py  reply.py
cowagent/channel/: channel.py  channel_factory.py  chat_channel.py  chat_message.py  file_cache.py
cowagent/cli/: __init__.py  __main__.py  cli.py  utils.py
cowagent/common/: cloud_client.py  const.py  log.py  memory.py  package_manager.py  time_check.py  tmp_dir.py  token_bucket.py  utils.py
cowagent/models/: bot.py  bot_factory.py  openai_compatible_bot.py  session_manager.py
cowagent/plugins/: __init__.py  plugin.py  plugin_manager.py
cowagent/tests/: test_context.py  test_dequeue.py  test_diff.py  test_expired_dict.py  test_protocol_models.py  test_protocol_result.py  test_protocol_task.py  test_reply.py  test_singleton.py  test_skills_frontmatter.py  test_sorted_dict.py  test_utils.py
cowagent/translate/: factory.py
cowagent/voice/: audio_convert.py  factory.py
docker/: entrypoint.sh
docs/en/: README.md
docs/guide/: manual-install.mdx  upgrade.mdx
docs/intro/: architecture.mdx  features.mdx
docs/ja/: README.md
docs/memory/: index.mdx
docs/releases/: v2.0.0.mdx
docs/skills/: create.mdx  index.mdx
scripts/: init.sh  install.sh  run.ps1  shared.sh  start-ui.sh  start.sh  status.sh  stop-ui.sh  stop.sh
skills/: README.md
skills/skill-creator/: SKILL.md
tests/: __init__.py  test_integration.py
(+145 files in other folders)
