[build-system]
requires = ["setuptools>=45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cowagent"
version = "1.2.0"
description = "CowAgent - AI Agent on WeChat and more"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0",
    "aiohttp>=3.9.0",
    "requests>=2.33.1",
    "chardet",
    "Pillow",
    "web.py",
    "python-dotenv",
    "PyYAML",
    "croniter",
    "click",
    "qrcode",
    "wechatpy",
    "zai-sdk",
    "dashscope",
    "lark-oapi",
    "dingtalk-stream",
    "websocket-client",
    "pycryptodome",
    "agentmesh-sdk",
]

[project.optional-dependencies]
voice = [
    "pydub-ng>=0.2.0",
    "gTTS",
    "edge-tts",
    "elevenlabs",
    "pyttsx3",
    "SpeechRecognition",
    "azure-cognitiveservices-speech",
    "langid",
    "tiktoken",
]
plugins = [
    "dulwich",
    "google-generativeai",
    "pypdf",
    "python-docx",
    "openpyxl",
    "python-pptx",
    "chatgpt-tool-hub",
]
all = ["cowagent[voice,plugins]"]

[project.scripts]
cow = "cowagent.cli.cli:main"

[tool.setuptools.packages.find]
include = ["cowagent*"]

[tool.ruff]
exclude = [
    "cowagent/channel/wechatmp/",
    "cowagent/channel/wechat/",
    "cowagent/channel/wework/",
]

[tool.ruff.lint]
ignore = [
    "F403",  # star imports
    "F405",  # undefined from star imports
    "F811",  # redefinition
]
